[gd_scene load_steps=6 format=3 uid="uid://b3v4y63kb2gyo"]

[ext_resource type="Script" path="res://engine/card_game/cards/rendered_card.gd" id="1_7tn0i"]
[ext_resource type="FontFile" uid="uid://b1jhwaars6okg" path="res://engine/common/fonts/unitblock-font/Unitblock-JpJma.ttf" id="2_8hygy"]
[ext_resource type="Texture2D" uid="uid://bjlh2ahxxqfds" path="res://engine/card_game/assets/pilot_decks/AI_charge.jpg" id="2_evy17"]
[ext_resource type="Script" path="res://engine/common/tools/regular_polygon.gd" id="3_b7s34"]

[sub_resource type="Theme" id="Theme_ni6wk"]

[node name="RenderedCard" type="Node2D"]
script = ExtResource("1_7tn0i")

[node name="HoverBorder" type="ColorRect" parent="."]
offset_left = -119.0
offset_top = -174.0
offset_right = 118.0
offset_bottom = 172.0
color = Color(0.996078, 0.964706, 0.909804, 1)

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -118.0
offset_top = -173.0
offset_right = 117.0
offset_bottom = 171.0
color = Color(0, 0, 0, 1)

[node name="ImgMask" type="ColorRect" parent="."]
clip_children = 1
offset_left = -99.0
offset_top = -159.0
offset_right = 95.0
offset_bottom = 11.0
color = Color(0.0470588, 0.0470588, 0.0470588, 1)

[node name="ArtImg" type="Sprite2D" parent="ImgMask"]
position = Vector2(99, 116)
scale = Vector2(0.25, 0.25)
texture = ExtResource("2_evy17")

[node name="LabelRect" type="ColorRect" parent="."]
offset_left = -118.0
offset_top = -173.0
offset_right = 99.0
offset_bottom = -147.0
color = Color(0.329412, 0.933333, 0.184314, 1)

[node name="DisplayName" type="RichTextLabel" parent="LabelRect"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.769
offset_top = 2.0
offset_bottom = 10.006
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("2_8hygy")
bbcode_enabled = true
text = "[center]Jiu Jitsu[/center]"

[node name="LabelRect2" type="ColorRect" parent="."]
offset_left = -99.0
offset_top = 36.0
offset_right = 96.0
offset_bottom = 153.0
color = Color(0, 0, 0, 0.67451)

[node name="RichTextLabel" type="RichTextLabel" parent="LabelRect2"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.769
offset_left = 9.0
offset_top = 14.0
offset_right = -12.0
offset_bottom = 22.027
theme_override_fonts/normal_font = ExtResource("2_8hygy")
bbcode_enabled = true
text = "Change the target of the limb that you damage with this ability"

[node name="Polygon2D4" type="Polygon2D" parent="."]
position = Vector2(44, -152)
color = Color(0, 0, 0, 1)
polygon = PackedVector2Array(73, 5, 12.5, 5, 12, 5, 11, 4, -12.5, -21.6506, 72, -21.6506, 73, 0)

[node name="ValueLabel" type="RichTextLabel" parent="Polygon2D4"]
offset_left = 8.0
offset_top = -25.0
offset_right = 71.0
offset_bottom = 9.0
theme = SubResource("Theme_ni6wk")
theme_override_font_sizes/normal_font_size = 24
bbcode_enabled = true
text = "[center]6 - 9[/center]"

[node name="CostLabelPoly" type="Polygon2D" parent="."]
position = Vector2(95, 149)
rotation = 0.785398
color = Color(0.329412, 0.933333, 0.184314, 1)
polygon = PackedVector2Array(25, 0, 1.53076e-15, 25, -25, 3.06152e-15, -4.59227e-15, -25, 25, 0)
script = ExtResource("3_b7s34")
sides = 4
radius = 25.0

[node name="CostLabel" type="RichTextLabel" parent="CostLabelPoly"]
offset_left = -28.2843
offset_top = 1.41421
offset_right = 13.7157
offset_bottom = 41.4142
rotation = -0.785398
theme = SubResource("Theme_ni6wk")
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 24
bbcode_enabled = true
text = "[center]1[/center]"

[connection signal="mouse_entered" from="ColorRect" to="." method="project_inspection"]
[connection signal="mouse_exited" from="ColorRect" to="." method="remove_inspection"]
